--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="1:26:59">
+    <meta name="twitter:title" content="0:55:18">
     <meta name="twitter:description" content="">
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/ff813ff/llw/refs/heads/main/po/L0vfCRts.png">
-    <meta name="twitter:url" content="https://ff813ff.github.io/llw/">
+    <meta name="twitter:image" content="https://im.gurl.eu.org/file/AgACAgEAAxkDAAEBWGVpVPj_W1fGjsrMd3rgD6IFpp4qXAACdwtrG25vqEYP7cziu2sqhwEAAwIAA3kAAzgE.png">
+    <meta name="twitter:url" content="https://a35.daddy18.online">
     
     <!-- 页面标题 -->
     <title>X Global Dark Web Service Hub</title>
